--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/render": "^1.3.0",
     "@stripe/stripe-js": "^7.9.0",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -17,6 +18,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.1.0",
     "stripe": "^18.5.0"
   },
   "devDependencies": {
